--- a/post-installation/add/add-components/add-rmp-to-custom-pod.yml
+++ b/post-installation/add/add-components/add-rmp-to-custom-pod.yml
@@ -92,6 +92,17 @@
 
   roles:
   - { role: apigee-opdk-modules, tags: ['minimum', 'cache', 'license', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup','common'] }
+  - { role: apigee-opdk-setup-os-epel, tags: ['epel'] }
+  - { role: apigee-opdk-shutdown-iptables, tags: ['minimum', 'iptables'] }
+  - { role: apigee-opdk-yum-repository-proxy-config, tags: ['yum-proxy-config']}
+  - { role: apigee-opdk-setup-os-minimum, tags: ['os-minimum'] }
+  - { role: apigee-opdk-setup-os-limits, tags: ['limit'] }
+  - { role: apigee-opdk-setup-os-sysctl, tags: ['sysctl'] }
+  - { role: apigee-opdk-setup-selinux-disable, tags: ['minimum', 'selinux'] }
+  - { role: apigee-server-restart, tags: ['minimum', 'restart-server'], start_check_delay: 30, when: (selinux_disabled is defined and selinux_disabled.changed) or (iptables_disabled is defined and not iptables_disabled) or (force_restart is defined and force_restart)  }
+  - { role: apigee-opdk-setup-os-common, tags: ['os-common'] }
+  - { role: apigee-opdk-setup-openjdk-cache, tags: ['minimum', 'openjdk'], jdk_version: '1.8' }
+  - { role: apigee-opdk-setup-openjdk, tags: ['minimum', 'openjdk'], jdk_version: '1.8' }
   - { role: apigee-opdk-settings-private-address, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
   - { role: apigee-opdk-settings-management-server, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
   - { role: apigee-opdk-settings-ldap, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
@@ -107,7 +118,7 @@
   - { role: apigee-opdk-setup-component-install, component: 'apigee-setup', tags: ['minimum', 'setup', 'apigee-component-install', 'apigee-pre-req','common-install', 'common'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['minimum', 'apigee-user','ownership', 'apigee-pre-req','common-install', 'common'] }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'rmp-config']  }
-  - { role: apigee-opdk-setup-component, profile: 'rmp', tags: ['minimum', 'rmp-setup'] }
+  - { role: apigee-opdk-setup-component, profile: 'mp', tags: ['minimum', 'mp-setup'] }
   - { role: apigee-opdk-start-components, tags: ['minimum', 'rmp-start', 'start'] }
   - { role: apigee-opdk-setup-status, tags: ['rmp-status', 'status'] }
   - { role: apigee-opdk-server-self, server_types: ['router'], tags: ['self'] }
@@ -128,9 +139,16 @@
       - { org: "{{ org_name }}", env: "{{ env_name }}", new_user: 'n' }
 
   roles:
-  - { role: apigee-opdk-modules, tags: ['org-config'] }
-  - { role: apigee-opdk-setup-org-config, tags: ['org-setup'] }
-  - { role: apigee-opdk-setup-org, tags: ['org-setup'] }
+  - { role: apigee-opdk-modules, tags: ['config'] }
+  - { role: apigee-opdk-setup-org-config, tags: ['config'] }
+  - { role: apigee-opdk-setup-org, tags: ['setup'] }
+
+
+
+- name: Configure Organization and Environments
+  hosts: edge
+  gather_facts: no
+  tags: ['org']
 
   tasks:
     - name: Update cache with provided values
