--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -80,31 +80,31 @@
   - { role: apigee-opdk-start-components, tags: ['ms-start', 'start'] }
   - { role: apigee-opdk-setup-status, tags: ['ms-status', 'status'] }
 
-- name: Configure & Install Router & Message Processor
-  hosts: rmp
-  gather_facts: no
-  strategy: free
-  tags: ['rmp','edge']
-  vars:
-    property_folders:
-    - "~/.apigee-secure"
-    - "~/.apigee"
-  roles:
-  - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'rmp-config'] }
-  - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'rmp-config']  }
-  - { role: apigee-opdk-setup-component, profile: 'rmp', tags: ['minimum', 'rmp-setup'] }
-  - { role: apigee-opdk-start-components, tags: ['minimum', 'rmp-start', 'start'] }
-  - { role: apigee-opdk-setup-status, tags: ['rmp-status', 'status'] }
-  - { role: apigee-opdk-server-self, server_types: ['router'], tags: ['self'] }
-  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_router_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
-  - { role: apigee-opdk-server-self, server_types: ['mp'], tags: ['self'] }
-  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_mp_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
+#- name: Configure & Install Router & Message Processor
+#  hosts: rmp
+#  gather_facts: no
+#  strategy: free
+#  tags: ['rmp','edge']
+#  vars:
+#    property_folders:
+#    - "~/.apigee-secure"
+#    - "~/.apigee"
+#  roles:
+#  - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'rmp-config'] }
+#  - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'rmp-config']  }
+#  - { role: apigee-opdk-setup-component, profile: 'rmp', tags: ['minimum', 'rmp-setup'] }
+#  - { role: apigee-opdk-start-components, tags: ['minimum', 'rmp-start', 'start'] }
+#  - { role: apigee-opdk-setup-status, tags: ['rmp-status', 'status'] }
+#  - { role: apigee-opdk-server-self, server_types: ['router'], tags: ['self'] }
+#  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_router_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
+#  - { role: apigee-opdk-server-self, server_types: ['mp'], tags: ['self'] }
+#  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_mp_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
 
 - name: Configure & Install Router
   hosts: router
   gather_facts: no
   strategy: free
-  tags: ['r','edge']
+  tags: ['router','edge', 'rmp']
   vars:
     property_folders:
     - "~/.apigee-secure"
@@ -122,7 +122,7 @@
   hosts: mp
   gather_facts: no
   strategy: free
-  tags: ['mp','edge']
+  tags: ['mp','edge','rmp']
   vars:
     property_folders:
     - "~/.apigee-secure"
@@ -139,7 +139,7 @@
 - name: Configure & Install Qpid
   hosts: qpid
   gather_facts: no
-  tags: ['qpid','edge']
+  tags: ['qpid','edge','analytics']
   vars:
     property_folders:
     - "~/.apigee-secure"
