--- a/post-installation/add/add-components/add-rmp-to-custom-pod.yml
+++ b/post-installation/add/add-components/add-rmp-to-custom-pod.yml
@@ -4,21 +4,12 @@
   vars:
     property_folders:
     - "~/.apigee-secure"
+    - "~/.apigee"
 
   vars_prompt:
-    - name: "prompt_opdk_version"
-      prompt: "OPDK version"
-      default: "4.19.01"
-      private: no
-
-    - name: "prompt_use_all_mps"
-      prompt: "Does we apply these routers and message processors to all environments?"
-      default: 'y'
-      private: no
 
     - name: "prompt_org_name"
       prompt: "Name of organization for these routers and message processors"
-      default: "opdk"
       private: no
 
     - name: "prompt_env_name"
@@ -45,20 +36,6 @@
       prompt: "Space delimited string of router IP addresses or the load balancer for this set of routers"
       private: no
 
-    - name: "prompt_opdk_resources_path"
-      prompt: "OPDK resources on target node"
-      default: "/tmp/edge"
-      private: no
-
-    - name: "prompt_local_apigee_secure_path"
-      prompt: "Location of secure credentials"
-      default: "~/.apigee-secure"
-      private: no
-
-#    - name: "prompt_use_opdk_ldap_remote_host"
-#      prompt: "Use OPDK LDAP remote host"
-#      default: "n"
-#      private: no
 
   roles:
   - { role: apigee-opdk-modules }
@@ -67,65 +44,12 @@
     - name: Update cache with provided values
       set_fact:
         cacheable: True
-        opdk_version: "{{ prompt_opdk_version }}"
-        use_all_mps: "{{ prompt_use_all_mps }}"
         org_name: "{{ prompt_org_name }}"
         env_name: "{{ prompt_env_name }}"
         opdk_mp_pod: "{{ prompt_opdk_mp_pod }}"
         virtual_host_port: "{{ prompt_virtual_host_port }}"
         virtual_host_name: "{{ prompt_virtual_host_name }}"
         load_balancer: "{{ prompt_load_balancer }}"
-        opdk_resources_path: "{{ prompt_opdk_resources_path }}"
-        local_apigee_secure_path: "{{ prompt_local_apigee_secure_path }}"
-#        use_opdk_ldap_remote_host: "{{ prompt_use_opdk_ldap_remote_host }}"
-
-
-- name: Configure & Install Router & Message Processor
-  hosts: "{{ target_hosts }}"
-  gather_facts: no
-  strategy: free
-  tags: ['rmp']
-
-  vars:
-    property_folders:
-      - "~/.apigee-secure"
-
-  roles:
-  - { role: apigee-opdk-modules, tags: ['minimum', 'cache', 'license', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup','common'] }
-  - { role: apigee-opdk-setup-os-epel, tags: ['epel'] }
-  - { role: apigee-opdk-shutdown-iptables, tags: ['minimum', 'iptables'] }
-  - { role: apigee-opdk-yum-repository-proxy-config, tags: ['yum-proxy-config']}
-  - { role: apigee-opdk-setup-os-minimum, tags: ['os-minimum'] }
-  - { role: apigee-opdk-setup-os-limits, tags: ['limit'] }
-  - { role: apigee-opdk-setup-os-sysctl, tags: ['sysctl'] }
-  - { role: apigee-opdk-setup-selinux-disable, tags: ['minimum', 'selinux'] }
-  - { role: apigee-server-restart, tags: ['minimum', 'restart-server'], start_check_delay: 30, when: (selinux_disabled is defined and selinux_disabled.changed) or (iptables_disabled is defined and not iptables_disabled) or (force_restart is defined and force_restart)  }
-  - { role: apigee-opdk-setup-os-common, tags: ['os-common'] }
-  - { role: apigee-opdk-setup-openjdk-cache, tags: ['minimum', 'openjdk'], jdk_version: '1.8' }
-  - { role: apigee-opdk-setup-openjdk, tags: ['minimum', 'openjdk'], jdk_version: '1.8' }
-  - { role: apigee-opdk-settings-private-address, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
-  - { role: apigee-opdk-settings-management-server, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
-  - { role: apigee-opdk-settings-ldap, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
-  - { role: apigee-opdk-settings-region, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
-  - { role: apigee-opdk-settings-cassandra, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
-  - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
-  - { role: apigee-opdk-setup-apigee-user, tags: ['minimum', 'apigee-user', 'bootstrap'] }
-  - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['minimum', 'apigee-user', 'bootstrap'] }
-  - { role: apigee-opdk-setup-java-home, tags: ['minimum', 'java-home', 'bootstrap'] }
-  - { role: apigee-opdk-setup-bootstrap-cache, tags: ['minimum', 'apigee-bootstrap', 'bootstrap'] }
-  - { role: apigee-opdk-setup-bootstrap, tags: ['minimum', 'apigee-bootstrap', 'bootstrap'] }
-  - { role: apigee-opdk-setup-license, tags: ['minimum', 'license', 'bootstrap', 'common'] }
-  - { role: apigee-opdk-setup-component-install, component: 'apigee-setup', tags: ['minimum', 'setup', 'apigee-component-install', 'apigee-pre-req','common-install', 'common'] }
-  - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['minimum', 'apigee-user','ownership', 'apigee-pre-req','common-install', 'common'] }
-  - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'rmp-config']  }
-  - { role: apigee-opdk-setup-component, profile: 'rmp', tags: ['minimum', 'mp-setup'] }
-  - { role: apigee-opdk-start-components, tags: ['minimum', 'rmp-start', 'start'] }
-  - { role: apigee-opdk-setup-status, tags: ['rmp-status', 'status'] }
-  - { role: apigee-opdk-server-self, server_types: ['router'], tags: ['self'] }
-  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_router_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
-  - { role: apigee-opdk-server-self, server_types: ['mp'], tags: ['self'] }
-  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_mp_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
-
 
 - name: Configure Organization and Environments
   hosts: ms[0]
@@ -135,6 +59,7 @@
   vars:
     property_folders:
       - "~/.apigee-secure"
+      - "~/.apigee"
     tenants:
       - { org: "{{ org_name }}", env: "{{ env_name }}", new_user: 'n' }
 
@@ -142,8 +67,6 @@
   - { role: apigee-opdk-modules, tags: ['config'] }
   - { role: apigee-opdk-setup-org-config, tags: ['config'] }
   - { role: apigee-opdk-setup-org, tags: ['setup'] }
-
-
 
 - name: Configure Organization and Environments
   hosts: edge
@@ -154,15 +77,10 @@
     - name: Update cache with provided values
       set_fact:
         cacheable: True
-        opdk_version: ""
-        use_all_mps: ""
         org_name: ""
         env_name: ""
         opdk_mp_pod: ""
         virtual_host_port: ""
         virtual_host_name: ""
         load_balancer: ""
-        opdk_resources_path: ""
-        local_apigee_secure_path: ""
-        use_opdk_ldap_remote_host: ""
 
