--- a/post-installation/remove/remove-components/remove-router.yml
+++ b/post-installation/remove/remove-components/remove-router.yml
@@ -1,5 +1,5 @@
 ---
-- name: Playbook to remove a cassandra
+- name: Playbook to remove a router
   hosts: "{{ target_hosts }}"
   gather_facts: no
 
@@ -35,11 +35,12 @@
       method: POST
       user: '{{ opdk_user_email }}'
       password: '{{ opdk_user_pass }}'
+      status_code: ['200','404']
       body_format: 'form-urlencoded'
       body:
         uuid: '{{ uuid }}'
         region: '{{ region }}'
-        pod_name: '{{ pod }}'
+        pod_name: '{{ pod_name }}'
         type: 'router'
         action: 'remove'
 
@@ -47,6 +48,7 @@
     uri:
       url: http://{{ local_mgmt_ip }}:8080/v1/servers/{{ uuid }}
       method: DELETE
+      status_code: ['200','404']
       user: '{{ opdk_user_email }}'
       password: '{{ opdk_user_pass }}'
 
