Updated to add an Router and Message Processor to a Custom pod.

--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -104,7 +104,7 @@
   hosts: router
   gather_facts: no
   strategy: free
-  tags: ['router','edge', 'rmp']
+  tags: ['router','edge', 'rmp', 'r']
   vars:
     property_folders:
     - "~/.apigee-secure"
