--- a/post-installation/remove/remove-components/remove-cassandra.yml
+++ b/post-installation/remove/remove-components/remove-cassandra.yml
@@ -52,7 +52,7 @@
       delegate_to: "{{ nodetool_delegate }}"
 
     rescue:
-    - name: Remove node that is not a part of the ring
+    - name: Remove node that is not a part of the ring, using removenode force
       command: "{{ nodetool }} removenode force {{ cassandra_uuid }} "
       delegate_to: "{{ nodetool_delegate }}"
 
