--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -81,31 +81,31 @@
   - { role: apigee-opdk-start-components, tags: ['ms-start', 'start'] }
   - { role: apigee-opdk-setup-status, tags: ['ms-status', 'status'] }
 
-#- name: Configure & Install Router & Message Processor
-#  hosts: rmp
-#  gather_facts: no
-#  strategy: free
-#  tags: ['rmp','edge']
-#  vars:
-#    property_folders:
-#    - "~/.apigee-secure"
-#    - "~/.apigee"
-#  roles:
-#  - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'rmp-config'] }
-#  - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'rmp-config']  }
-#  - { role: apigee-opdk-setup-component, profile: 'rmp', tags: ['minimum', 'rmp-setup'] }
-#  - { role: apigee-opdk-start-components, tags: ['minimum', 'rmp-start', 'start'] }
-#  - { role: apigee-opdk-setup-status, tags: ['rmp-status', 'status'] }
-#  - { role: apigee-opdk-server-self, server_types: ['router'], tags: ['self'] }
-#  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_router_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
-#  - { role: apigee-opdk-server-self, server_types: ['mp'], tags: ['self'] }
-#  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_mp_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
+- name: Configure & Install Router & Message Processor
+  hosts: rmp
+  gather_facts: no
+  strategy: free
+  tags: ['rmp','edge']
+  vars:
+    property_folders:
+    - "~/.apigee-secure"
+    - "~/.apigee"
+  roles:
+  - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'rmp-config'] }
+  - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'rmp-config']  }
+  - { role: apigee-opdk-setup-component, profile: 'rmp', tags: ['minimum', 'rmp-setup'] }
+  - { role: apigee-opdk-start-components, tags: ['minimum', 'rmp-start', 'start'] }
+  - { role: apigee-opdk-setup-status, tags: ['rmp-status', 'status'] }
+  - { role: apigee-opdk-server-self, server_types: ['router'], tags: ['self'] }
+  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_router_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
+  - { role: apigee-opdk-server-self, server_types: ['mp'], tags: ['self'] }
+  - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_mp_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
 
 - name: Configure & Install Router
   hosts: router,rmp
   gather_facts: no
   strategy: free
-  tags: ['router','edge', 'rmp', 'r']
+  tags: ['router','edge', 'r']
   vars:
     property_folders:
     - "~/.apigee-secure"
@@ -123,7 +123,7 @@
   hosts: mp,rmp
   gather_facts: no
   strategy: free
-  tags: ['mp','edge','rmp']
+  tags: ['mp','edge']
   vars:
     property_folders:
     - "~/.apigee-secure"
