updated local folder permissions

--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -18,7 +18,7 @@
     - name: Update with Yum utilities
       tags: ['yum']
       become: true
-      yum:
+      package:
         name: "yum-utils"
         state: present
 
